@@ -513,6 +513,8 @@ Core and Builtins
 Library
 -------
 
+- Add a reverse() method to collections.deque().
+
 - Fix variations of extending deques:  d.extend(d)  d.extendleft(d)  d+=d
 
 - Issue #6986: Fix crash in the JSON C accelerator when called with the
